--- a/pom.xml
+++ b/pom.xml
@@ -138,26 +138,40 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
                 <configuration>
-                    <includes>
-                        <include>**/ParallelRun.java</include>
-                    </includes>
+<!--                    <includes>-->
+<!--                        <include>**/ParallelRun.java</include>-->
+<!--                    </includes>-->
                     <parallel>methods</parallel>
-                    <threadCount>4</threadCount>
-                    <useUnlimitedThreads>false</useUnlimitedThreads>
+<!--                    <threadCount>4</threadCount>-->
+                    <useUnlimitedThreads>true</useUnlimitedThreads>
                 </configuration>
             </plugin>
 
-            <!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M3</version> <executions> <execution> <goals> <goal>integration-test</goal>
-                </goals> <configuration> UNCOMMENT - To add any exclusions if required <excludes>
-                <exclude>**/*IT*.java</exclude> </excludes> <includes> UNCOMMENT BELOW LINE
-                - To execute feature files with a single runner <include>**/MyTestRunner.java</include>
-                UNCOMMENT BELOW LINE - To execute feature files with multiple runners <include>**/*Runner.java</include>
-                </includes> UNCOMMENT BELOW 3 LINES - To execute using parallel or combination
-                option <parallel>methods</parallel> <threadCount>4</threadCount> <perCoreThreadCount>true</perCoreThreadCount>
-                UNCOMMENT BELOW 3 LINES - To execute using forking or combination option
-                <forkCount>2</forkCount> <reuseForks>true</reuseForks> <reportsDirectory>${project.build.directory}/failsafe-reports_${surefire.forkNumber}</reportsDirectory>
-                </configuration> </execution> </executions> </plugin> -->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-failsafe-plugin</artifactId>-->
+<!--                <version>3.0.0-M3</version>-->
+<!--                <dependencies>-->
+<!--                    <dependency>-->
+<!--                        <groupId>org.apache.maven.surefire</groupId>-->
+<!--                        <artifactId>surefire-junit47</artifactId>-->
+<!--                        <version>3.0.0-M4</version>-->
+<!--                    </dependency>-->
+<!--                </dependencies>-->
+<!--                <configuration>-->
+<!--                    <parallel>classes</parallel>-->
+<!--                    <threadCount>2</threadCount>-->
+<!--                    <forkCount>2C</forkCount>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>integration-test</goal>-->
+<!--                        </goals>-->
+<!--                        -->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
 
 
         </plugins>
